--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 prost = "0.12.6"
 tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
 tonic = "0.11.0"
-sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
+sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
 dotenv = "0.15.0"
 serde = "1.0.203"
 sea-orm-migration = "^0.12.0"
@@ -15,6 +15,8 @@ argon2 = { version = "0.5.3", features = ["std"]}
 thiserror = "1.0.61"
 jsonwebtoken = "9.3.0"
 rand = "0.8.5"
+chrono = "0.4.38"
+uuid = { version = "1.8.0", features = ["v4"] }
 
 [build-dependencies]
 tonic-build = "0.11"
